; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/cache/extr_relmapper.c_AtPrepare_RelationMap.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/cache/extr_relmapper.c_AtPrepare_RelationMap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64 }
%struct.TYPE_8__ = type { i64 }
%struct.TYPE_5__ = type { i64 }
%struct.TYPE_6__ = type { i64 }

@active_shared_updates = common dso_local global %struct.TYPE_7__ zeroinitializer, align 8
@active_local_updates = common dso_local global %struct.TYPE_8__ zeroinitializer, align 8
@pending_shared_updates = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@pending_local_updates = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@ERROR = common dso_local global i32 0, align 4
@ERRCODE_FEATURE_NOT_SUPPORTED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [60 x i8] c"cannot PREPARE a transaction that modified relation mapping\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AtPrepare_RelationMap() #0 {
  %1 = load i64, i64* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @active_shared_updates, i32 0, i32 0), align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %12, label %3

3:                                                ; preds = %0
  %4 = load i64, i64* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @active_local_updates, i32 0, i32 0), align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %12, label %6

6:                                                ; preds = %3
  %7 = load i64, i64* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @pending_shared_updates, i32 0, i32 0), align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %6
  %10 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @pending_local_updates, i32 0, i32 0), align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %18

12:                                               ; preds = %9, %6, %3, %0
  %13 = load i32, i32* @ERROR, align 4
  %14 = load i32, i32* @ERRCODE_FEATURE_NOT_SUPPORTED, align 4
  %15 = call i32 @errcode(i32 %14)
  %16 = call i32 @errmsg(i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str, i64 0, i64 0))
  %17 = call i32 @ereport(i32 %13, i32 %16)
  br label %18

18:                                               ; preds = %12, %9
  ret void
}

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
